--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="2.6"
+        android:layout_weight="2.55"
         android:layout_height="0dp"
         android:orientation="vertical">
 
@@ -49,7 +49,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="0.45"
         android:orientation="vertical">
 
         <View
@@ -65,6 +65,7 @@
             android:layout_height="50dp"
             app:cardCornerRadius="10dp"
             android:layout_marginEnd="@dimen/_5dp"
+            android:layout_marginBottom="@dimen/_10dp"
             android:background="@android:color/transparent"
             >
 
