--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -12,11 +12,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:cardCornerRadius="@dimen/_10dp"
         app:cardElevation="@dimen/_4dp"
         android:elevation="@dimen/_4dp"
+        android:contentDescription=""
         android:foreground="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
@@ -29,8 +30,8 @@
 
             <ImageView
                 android:id="@+id/icon"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_centerInParent="true"
                 android:src="@drawable/icon__packing_list" />
 
