--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -65,7 +65,7 @@
 
     <style name="textRegularColorAccentSmall" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/colorPrimaryDark</item>
-        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
         <item name="android:textSize">14sp</item>
 
     </style>
@@ -73,7 +73,7 @@
 
     <style name="textMediumWhite" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
         <item name="android:textSize">20sp</item>
 
     </style>
@@ -81,7 +81,7 @@
 
     <style name="textColorPrimaryRegularMedium" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
         <item name="android:textSize">14sp</item>
 
     </style>
